--- a/css/src/generic.scss
+++ b/css/src/generic.scss
@@ -70,15 +70,16 @@ $content-padding: 5rem;
 }
 
 html {
-    -ms-text-size-adjust:           none;
-    -webkit-text-size-adjust:       none;                   // prevent resizing text to fit
-    -webkit-touch-callout:          none;                   // safari: prevent callout to copy image, etc when tap hold
-    -webkit-tap-highlight-color:    transparent;            // prevent tap highlight color / shadow
-    -webkit-tap-highlight-color:    rgba(0,0,0,0);
-    -moz-osx-font-smoothing:        auto;                   // firefox: font smoothing 
-    -webkit-font-smoothing:         subpixel-antialiased;   // chrome, opera, safari: font smoothing
-    font-smooth:                    always;
-    scroll-behavior:                smooth;                 // prevent instant scroll, enable smooth movement
+    -ms-text-size-adjust:        none;
+    -webkit-text-size-adjust:    none;                   // prevent resizing text to fit
+    -webkit-touch-callout:       none;                   // safari: prevent callout to copy image, etc when tap hold
+    -webkit-tap-highlight-color: transparent;            // prevent tap highlight color / shadow
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -moz-osx-font-smoothing:     auto;                   // firefox: font smoothing 
+    -webkit-font-smoothing:      subpixel-antialiased;   // chrome, opera, safari: font smoothing
+    font-smooth:                 always;
+    scroll-behavior:             smooth;                 // prevent instant scroll, enable smooth movement
+    direction: ltr;
     
     min-height: 100%;
     background-color: #f8f8f8;
